<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/kredit_detail"
            android:layout_margin="15dp"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/kendaraan"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/textKendaraan"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/textHarga"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tenor"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/textTenor"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/textDP"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/angsuran"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/textAngsuran"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/foto_pemohon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <ImageView
            android:id="@+id/imageFotoDetail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="20dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/textSizeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSimulasi"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/simulasi_baru"/>
    </LinearLayout>

</ScrollView>